refactor api, make docker for frontend
